--- a/packages/obsidian-canva-embed/package.json
+++ b/packages/obsidian-canva-embed/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "obsidian-canva-embed",
-	"version": "1.0.4",
+	"private": true,
+	"version": "0.2.0",
 	"description": "Obsidian plugin to embed Canva designs in your notes.",
 	"keywords": [],
 	"license": "MIT",
-	"author": "",
+	"author": "GregRos",
 	"main": "main.js",
 	"scripts": {
 		"build": "tsc -noEmit -skipLibCheck && sass node esbuild.config.mjs production",
@@ -13,14 +14,17 @@
 		"tag": "node tools/tag.mjs "
 	},
 	"devDependencies": {
+		"@obsidian-canva-embed/parser": "^0.1.0",
 		"@types/node": "^16.11.6",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.24.2",
+		"esbuild-sass-plugin": "^3.3.1",
+		"npm-run-all": "^4.1.5",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "^4.7.4"
 	},
 	"dependencies": {
-		"npm-run-all": "^4.1.5"
+		"esbuild-plugin-copy": "^2.1.1"
 	}
 }
