--- a/packages/canva-parser/package.json
+++ b/packages/canva-parser/package.json
@@ -3,7 +3,11 @@
 	"private": false,
 	"version": "0.1.0",
 	"main": "src/index.js",
-	"scripts": {},
+	"type": "module",
+	"scripts": {
+		"build": "tsc",
+		"watch": "tsc -w"
+	},
 	"author": "GregRos",
 	"license": "MIT",
 	"description": "You probably don't need this.",
