--- a/packages/canva-parser/package.json
+++ b/packages/canva-parser/package.json
@@ -14,5 +14,11 @@
 	"devDependencies": {
 		"@types/node": "^22.10.2",
 		"typescript": "^5.7.2"
-	}
+	},
+	"files": [
+		"dist",
+		"package.json",
+		"README.md",
+		"LICENSE.md"
+	]
 }
