--- a/packages/obsidian-canva-embed/package.json
+++ b/packages/obsidian-canva-embed/package.json
@@ -22,9 +22,7 @@
 		"npm-run-all": "^4.1.5",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "^4.7.4"
-	},
-	"dependencies": {
+		"typescript": "^4.7.4",
 		"esbuild-plugin-copy": "^2.1.1"
 	}
 }
