--- a/packages/parser/tsconfig.json
+++ b/packages/parser/tsconfig.json
@@ -2,14 +2,15 @@
 	"compilerOptions": {
 		"inlineSourceMap": true,
 		"inlineSources": true,
+		"declaration": true,
+		"declarationMap": true,
 		"module": "NodeNext",
 		"target": "ES2020",
 		"noImplicitAny": true,
 		"moduleResolution": "nodenext",
-		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
-		"lib": ["ES7"]
+		"lib": ["ES7", "DOM"]
 	},
 	"include": ["**/*.ts"]
 }
