--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "obsidian-canva-embed",
+	"name": "plugin",
 	"private": true,
 	"version": "0.2.0",
 	"description": "Obsidian plugin to embed Canva designs in your notes.",
@@ -10,7 +10,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/GregRos/canva-by-codeblock",
-		"directory": "packages/parser"
+		"directory": "packages/plugin"
 	},
 	"scripts": {
 		"build": "tsc -noEmit -skipLibCheck && sass node esbuild.config.mjs production",
