--- a/.github/workflows/plugin.release.yml
+++ b/.github/workflows/plugin.release.yml
@@ -5,10 +5,12 @@ on:
         branches:
             - master
 
+        paths:
+            - "packages/plugin"
+
 jobs:
     build:
         runs-on: ubuntu-latest
-
         steps:
             - uses: actions/checkout@v3
 
@@ -19,17 +21,18 @@ jobs:
 
             - name: Build plugin
               run: |
-                  npm install --workspace=obsidian-canva-embed
-                  npm run build --workspace=obsidian-canva-embed
-
-            - name: Create release
+                  npm run plugin -- install
+                  npm run plugin -- build
+            - name: Tag and release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              working-directory: packages/obsidian-canva-embed
               run: |
-                  echo "$GITHUB_REF_NAME"
-                  tag="$GITHUB_REF_NAME"
-                  echo "Creating release for tag $tag"
-                  gh release create $tag \
-                    --title="$tag" \
-                    dist/main.js dist/manifest.json dist/styles.css dist/versions.json
+                  set -ex
+                  version="$(npm run plugin -- run get-version)"
+                  echo "Version: $version"
+                  git tag -a "$version" -m "$version"
+                  git push origin "$version"
+                  gh release create "$version" \
+                    --title="$version" \
+                    packages/plugin/dist/{main.js,styles.css} \
+                    manifest.json versions.json
