--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "canva-by-codeblock",
+	"name": "canva-embed",
 	"private": true,
 	"workspaces": [
 		"packages/*"
@@ -7,9 +7,25 @@
 	"keywords": [],
 	"license": "MIT",
 	"author": "GregRos",
+	"scripts": {
+		"parser": "npm --workspace=canva-embed-parser",
+		"plugin": "npm --workspace=plugin",
+		"build:parser": "npm run plugin -- run build",
+		"watch:parser": "npm run plugin -- run watch",
+		"build:plugin": "npm run parser -- run build",
+		"watch:plugin": "npm run parser -- run watch",
+		"build": "run-s build:parser build:plugin",
+		"watch": "npm run build:parser && run-p watch:parser watch:plugin",
+		"tag": "node tools/tag.js"
+	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
-		"eslint": "8.7.0"
+		"eslint": "8.7.0",
+		"npm-run-all": "^4.1.5"
+	},
+	"dependencies": {
+		"@types/shelljs": "^0.8.15",
+		"shelljs": "^0.8.5"
 	}
 }
