--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@obsidian-canva-embed/parser",
+	"name": "canva-embed-parser",
 	"private": false,
 	"version": "0.1.0",
 	"main": "dist/index.js",
@@ -13,7 +13,7 @@
 	"type": "module",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/GregRos/canva-by-codeblock",
+		"url": "git+https://github.com/GregRos/canva-embed",
 		"directory": "packages/parser"
 	},
 	"scripts": {
@@ -31,6 +31,7 @@
 		"dist",
 		"package.json",
 		"README.md",
-		"LICENSE.md"
+		"LICENSE.md",
+		"src"
 	]
 }
