--- a/.github/workflows/plugin.release.yml
+++ b/.github/workflows/plugin.release.yml
@@ -6,7 +6,11 @@ on:
             - master
 
         paths:
-            - "packages/plugin"
+            - "packages/plugin/**"
+            - manifest.json
+            - README.md
+            - LICENSE.md
+            - versions.json
 
 jobs:
     build:
