--- a/.github/workflows/parser.publish.yml
+++ b/.github/workflows/parser.publish.yml
@@ -7,6 +7,7 @@ on:
 
         paths:
             - "packages/parser/**"
+            - .github/workflows/parser.publish.yml
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -22,7 +23,7 @@ jobs:
             - name: Build plugin
               run: |
                   npm run parser -- install
-                  npm run parser -- build
+                  npm run parser -- run build
 
             - name: Publish package
               env:
