fix package.json files, workflows

--- a/.github/workflows/parser.publish.yml
+++ b/.github/workflows/parser.publish.yml
@@ -9,7 +9,7 @@ on:
             - "packages/parser/**"
             - .github/workflows/parser.publish.yml
 jobs:
-    build:
+    publish:
         runs-on: ubuntu-latest
 
         steps:
