another workflow fix

--- a/.github/workflows/parser.publish.yml
+++ b/.github/workflows/parser.publish.yml
@@ -23,7 +23,7 @@ jobs:
             - name: Build plugin
               run: |
                   npm run parser -- install
-                  npm run parser -- run build
+                  npm run build
 
             - name: Publish package
               env:
