--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -30,6 +30,7 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "^4.7.4",
-		"esbuild-plugin-copy": "^2.1.1"
+		"esbuild-plugin-copy": "^2.1.1",
+		"shelljs": "^0.8.5"
 	}
 }
