another fix to push tag

--- a/.github/workflows/plugin.release.yml
+++ b/.github/workflows/plugin.release.yml
@@ -37,6 +37,8 @@ jobs:
                   echo "result=$(node tools/get-version.cjs)" >> "$GITHUB_OUTPUT"
                   cd ../..
             - name: Push tag
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                 set -ex
                 tag="${{ steps.version.outputs.result }}"
