--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -25,6 +25,7 @@
 	"description": "You probably don't need this.",
 	"devDependencies": {
 		"@types/node": "^22.10.2",
+		"npm-run-all": "^4.1.5",
 		"typescript": "^5.7.2"
 	},
 	"files": [
