--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "plugin",
 	"private": true,
-	"version": "0.3.0",
+	"version": "0.4.0",
 	"description": "Obsidian plugin to embed Canva designs in your notes.",
 	"keywords": [],
 	"license": "MIT",
@@ -21,16 +21,16 @@
 		"fix-version": "node tools/fix-version.mjs"
 	},
 	"devDependencies": {
-		"canva-embed-parser": "^0.2.0",
 		"@types/node": "^16.11.6",
 		"builtin-modules": "3.3.0",
+		"canva-embed-parser": "^0.5.0",
 		"esbuild": "^0.24.2",
+		"esbuild-plugin-copy": "^2.1.1",
 		"esbuild-sass-plugin": "^3.3.1",
 		"npm-run-all": "^4.1.5",
 		"obsidian": "latest",
+		"shelljs": "^0.8.5",
 		"tslib": "2.4.0",
-		"typescript": "^4.7.4",
-		"esbuild-plugin-copy": "^2.1.1",
-		"shelljs": "^0.8.5"
+		"typescript": "^4.7.4"
 	}
 }
